k8s/other/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: zmartr-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - zmartr.com
    - www.zmartr.com
    secretName: zmartr-tls
  rules:
  - host: zmartr.com
    http: &http_rules
      paths:
      - path: /api
        backend:
          serviceName: zmartr-api-cluster-ip
          servicePort: 80
      - path: /
        backend:
          serviceName: zmartr-frontend-cluster-ip
          servicePort: 80
  - host: www.zmartr.com
    http: *http_rules
